#29 Expand Hoyopass service to implement deleteUid()